<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HGroup">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/boton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteY="50dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/boton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_editor_absoluteY="100dp"
        tools:ignore="MissingConstraints"/>

    <!-- La barrera toma como limite el ancho del boton 2 -->
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/abcd"
        app:layout_constraintEnd_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_editor_absoluteY="150dp"
        tools:ignore="MissingConstraints"/>

    <!--  Grupos, poner button1, button2,etc en ids y desepareceran -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="button1"/>

    <!--  Barrera horizontal. poner button2 en ids, tomara el tamaño maximo del boton 2 -->
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="button2"/>

</androidx.constraintlayout.widget.ConstraintLayout>